--- a/Java/inflearn_스프링 웹 MVC/springmvc/src/main/resources/application.properties
+++ b/Java/inflearn_스프링 웹 MVC/springmvc/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+# hello.springmvc 패키지와 그 하위 로그 레벨 설정 (trace, debug, info, warn, error)
+# 개발서버는 debug 출력, 운영 서버는 info 출력
+logging.level.hello.springmvc=debug
