210705 타임리프 루프

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #folder
 
-/Java/inflearn_스프링 웹 MVC1&2/spingmvc1/강의자료/
+Java/inflearn_스프링 웹 MVC1&2/강의자료
 
-/Java/inflearn_스프링 웹 MVC1&2/spingmvc2/강의자료/
+
 
 
