--- a/Java/inflearn_실전! 스프링 부트와 JPA 활용1/jpashop/build.gradle
+++ b/Java/inflearn_실전! 스프링 부트와 JPA 활용1/jpashop/build.gradle
@@ -23,6 +23,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'junit:junit:4.13.1'
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+
+	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -33,3 +37,5 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+apply plugin: 'idea'
