fix: set gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 #folder
 
-Java/inflearn_스프링 웹 MVC1&2/강의자료
+Java/inflearn_스프링 웹 MVC1&2/강의자료/
 
-Java/inflearn_실전! 스프링 부트와 JPA 활용1/h2
+Java/inflearn_실전! 스프링 부트와 JPA 활용1/h2/
 
+Java/inflearn_실전! 스프링 부트와 JPA 활용1/jpashop/src/main/resources/static/
 
 
 
