--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ Java/inflearn_실전! 스프링 부트와 JPA 활용1/h2/
 
 Java/inflearn_실전! 스프링 부트와 JPA 활용1/jpashop/src/main/resources/static/
 
+Java/inflearn_자바 ORM 표준 JPA 프로그래밍 -기본편/강의자료
+
 
 
