--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,11 @@
 
 Java/inflearn_스프링 웹 MVC1&2/강의자료/
 
-Java/inflearn_실전! 스프링 부트와 JPA 활용1/h2/
-
 Java/inflearn_실전! 스프링 부트와 JPA 활용1/jpashop/src/main/resources/static/
 
 Java/inflearn_자바 ORM 표준 JPA 프로그래밍 -기본편/강의자료/
 
-Java/inflearn_자바 ORM 표준 JPA 프로그래밍 -기본편/h2/
+Java/inflearn_실전! 스프링 부트와 JPA 활용2/강의자료/
 
 
 
