--- a/Java/inflearn_실전! 스프링 부트와 JPA 활용2/jpashop/src/test/resources/application.yml
+++ b/Java/inflearn_실전! 스프링 부트와 JPA 활용2/jpashop/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/jpashop;
+    url: jdbc:h2:mem:test
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -16,6 +16,5 @@ spring:
 logging.level:
   org.hibernate.SQL: debug
   org.hibernate.type: trace
-
 
 
