--- a/Java/inflearn_실전! 스프링 부트와 JPA 활용2/jpashop/build.gradle
+++ b/Java/inflearn_실전! 스프링 부트와 JPA 활용2/jpashop/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.7.1'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-hibernate5'
+
 
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	compileOnly 'org.projectlombok:lombok'
