feat(jpaShop) : Add QueryDSL

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ Java/inflearn_실전! 스프링 부트와 JPA 활용1/jpashop/src/main/resources
 
 Java/inflearn_자바 ORM 표준 JPA 프로그래밍 -기본편/강의자료/
 
-Java/inflearn_실전! 스프링 부트와 JPA 활용2/강의자료/
+Java/inflearn_SpringBoot and JPA2/강의자료/
 
 JS/inflearn_Node.js 교과서/Node.js_교과서_강의교안/
 
