--- a/Java/inflearn_스프링 DB/2편/itemservice-db/build.gradle
+++ b/Java/inflearn_스프링 DB/2편/itemservice-db/build.gradle
@@ -8,6 +8,8 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+ext["hibernate.version"] = "5.6.5.Final"
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -29,6 +31,13 @@ dependencies {
     //JPA, 스프링 데이터 JPA 추가
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+//Querydsl 추가
+    implementation 'com.querydsl:querydsl-jpa'
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+
     //H2 데이터베이스 추가
     runtimeOnly 'com.h2database:h2'
 
@@ -43,4 +52,9 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+//Querydsl 추가, 자동 생성된 Q클래스 gradle clean으로 제거
+clean {
+    delete file('src/main/generated')
 }
