--- a/Java/inflearn_스프링 DB/2편/itemservice-db/build.gradle
+++ b/Java/inflearn_스프링 DB/2편/itemservice-db/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     //JPA, 스프링 데이터 JPA 추가
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
 //Querydsl 추가
     implementation 'com.querydsl:querydsl-jpa'
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
