--- a/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/second-service/src/main/resources/application.yml
+++ b/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/second-service/src/main/resources/application.yml
@@ -3,9 +3,11 @@ server:
 
 spring:
   application:
-    name: my-first-service
+    name: my-second-service
 
 eureka:
   client:
-    fetch-registry: false
-    register-with-eureka: false
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
