--- a/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/user-service/src/main/resources/application.yml
+++ b/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/user-service/src/main/resources/application.yml
@@ -13,3 +13,6 @@ eureka:
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka
 
+greeting:
+  message: Welcome to the Simple E-Commerce
+
