--- a/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/user-service/build.gradle
+++ b/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/user-service/build.gradle
@@ -25,6 +25,7 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'com.h2database:h2:1.3.176'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
