--- a/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/user-service/src/main/resources/application.yml
+++ b/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/user-service/src/main/resources/application.yml
@@ -4,6 +4,14 @@ server:
 spring:
   application:
     name: user-service
+
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true
+      path: /h2-console
+
 eureka:
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
