--- a/Spring/토비의 스프링 부트/springboot-ac/build.gradle
+++ b/Spring/토비의 스프링 부트/springboot-ac/build.gradle
@@ -13,7 +13,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.hsqldb:hsqldb:2.7.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
