--- a/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/user-service/build.gradle
+++ b/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/user-service/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'com.h2database:h2:1.3.176'
     implementation 'org.modelmapper:modelmapper:2.3.8'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
