feat: jwt 인증과정 추가

--- a/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/apigateway-service/src/main/resources/application.yml
+++ b/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/apigateway-service/src/main/resources/application.yml
@@ -9,6 +9,9 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
+token:
+  secret: user_token
+
 spring:
   application:
     name: apigateway-service
@@ -21,10 +24,10 @@ spring:
             preLogger: true
             postLogger: true
       routes:
-#        - id: user-service
-#          uri: lb://USER-SERVICE
-#          predicates:
-#            - Path=/user-service/**
+        #        - id: user-service
+        #          uri: lb://USER-SERVICE
+        #          predicates:
+        #            - Path=/user-service/**
         - id: user-service
           uri: lb://USER-SERVICE
           predicates:
@@ -49,6 +52,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/user-service()/(?<segment>.*), /$\{segment}
+            - AuthorizationHeaderFilter
         - id: catalog-service
           uri: lb://CATALOG-SERVICE
           predicates:
