--- a/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/apigateway-service/build.gradle
+++ b/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/apigateway-service/build.gradle
@@ -25,7 +25,9 @@ ext {
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'javax.xml.bind:jaxb-api'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
