feat: db스키마 관련 설정

--- a/Spring/Batch/spring-batch/build.gradle
+++ b/Spring/Batch/spring-batch/build.gradle
@@ -19,6 +19,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'com.h2database:h2:2.1.214'
+    runtimeOnly 'mysql:mysql-connector-java:8.0.32'
+
 
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
