--- a/Spring/Batch/spring-batch/src/main/resources/application.yml
+++ b/Spring/Batch/spring-batch/src/main/resources/application.yml
@@ -1,1 +1,33 @@
+spring:
+  profiles:
+    active: local
 
+---
+spring:
+  config:
+    activate:
+      on-profile: local
+  datasource:
+    hikari:
+      driver-class-name: org.h2.Driver
+      jdbc-url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+      username: sa
+      password:
+  batch:
+    jdbc:
+      initialize-schema: embedded
+
+---
+spring:
+  config:
+    activate:
+      on-profile: mysql
+  datasource:
+    hikari:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      jdbc-url: jdbc:mysql://localhost:3306/springbatch?useUnicode=true&characterEncoding-utf8
+      username: root
+      password:
+  batch:
+    jdbc:
+      initialize-schema: always
