feat: 내장 톰캣을 사용하는 부트 클래스 만들기

--- a/Spring/김영한_스프링 부트/embed/build.gradle
+++ b/Spring/김영한_스프링 부트/embed/build.gradle
@@ -25,7 +25,7 @@ tasks.named('test') {
 //일반 Jar 생성
 task buildJar(type: Jar) {
     manifest {
-        attributes 'Main-Class': 'hello.embed.EmbedTomcatSpringMain'
+        attributes 'Main-Class': 'hello.embed.EmbeddedTomcatSpringMain'
     }
     with jar
 }
@@ -33,7 +33,7 @@ task buildJar(type: Jar) {
 //Fat Jar 생성
 task buildFatJar(type: Jar) {
     manifest {
-        attributes 'Main-Class': 'hello.embed.EmbedTomcatSpringMain'
+        attributes 'Main-Class': 'hello.embed.EmbeddedTomcatSpringMain'
     }
     duplicatesStrategy = DuplicatesStrategy.WARN
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
