--- a/Spring/김영한_스프링 부트/external/src/main/resources/application.properties
+++ b/Spring/김영한_스프링 부트/external/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.config.activate.on-profile=prod
+url=prod.db.com
+username=prod_user
+password=prod_pw
+#---
+spring.config.activate.on-profile=dev
+url=dev.db.com
+username=dev_user
+password=dev_pw
+
 
